--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ clap = { version = "4.4.12", features = ["derive"] }
 comfy-table = { version = "7.1.0", default-features = false }
 filetime = "0.2.23"
 normalize-path = "0.2.1"
+
+[target.'cfg(unix)'.dependencies]
+users = { version = "0.11.0", default-features = false, features = ["cache"] }
