--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bffextract"
-version = "0.1.0"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,6 +9,7 @@ edition = "2021"
 chrono = "0.4.31"
 clap = { version = "4.4.12", features = ["derive"] }
 comfy-table = { version = "7.1.0", default-features = false }
+file-mode = "0.1.2"
 filetime = "0.2.23"
 normalize-path = "0.2.1"
 
