--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
 name = "bffextract"
-version = "0.3.0"
+version = "0.3.2"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Michael Richter <mr@osor.de>"]
+description = "Extract content of BFF file (AIX Backup file format)"
+readme = "README.md"
+repository = "https://github.com/ponchofiesta/bffextract-rs"
+license = "MIT"
+keywords = ["bff", "aix", "extract", "unpack", "decompress"]
+categories = ["command-line-utilities", "compression"]
 
 [dependencies]
 chrono = "0.4.31"
