--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ normalize-path = "0.2.1"
 
 [target.'cfg(unix)'.dependencies]
 users = { version = "0.11.0", default-features = false, features = ["cache"] }
+
+[dev-dependencies]
+mockall = "0.12.1"
