--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bffextract"
-version = "0.3.4"
+version = "0.4.0"
 edition = "2021"
 authors = ["Michael Richter <mr@osor.de>"]
 description = "Extract content of BFF file (AIX Backup file format)"
@@ -9,6 +9,14 @@ repository = "https://github.com/ponchofiesta/bffextract-rs"
 license = "MIT"
 keywords = ["bff", "aix", "extract", "unpack", "decompress"]
 categories = ["command-line-utilities", "compression"]
+
+[[bin]]
+name = "bffextract"
+path = "src/main.rs"
+
+[lib]
+name = "bffextract"
+path = "src/lib.rs"
 
 [dependencies]
 chrono = "0.4.31"
