Compare two BFF files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ comfy-table = { version = "7.1.0", default-features = false }
 file-mode = "0.1.2"
 filetime = "0.2.23"
 normalize-path = "0.2.1"
+similar = "2.5.0"
 
 [target.'cfg(unix)'.dependencies]
 users = { version = "0.11.0", default-features = false, features = ["cache"] }
