--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ file-mode = "0.1.2"
 filetime = "0.2.23"
 normalize-path = "0.2.1"
 similar = "2.5.0"
+sha2 = "0.10.8"
 
 [target.'cfg(unix)'.dependencies]
 users = { version = "0.11.0", default-features = false, features = ["cache"] }
