--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ file-mode = "0.1.2"
 filetime = "0.2.23"
 normalize-path = "0.2.1"
 users = { version = "0.11.0", default-features = false, features = ["cache"] }
+tempfile = "3.10.1"
