--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ keywords = ["bff", "aix", "extract", "unpack", "decompress"]
 
 [workspace.dependencies]
 chrono = { version = "0.4.38", default-features = false, features = ["now"] }
-clap = { version = "4.5.4", default-features = false, features = ["derive", "std"] }
+clap = { version = "4.5.4", features = ["derive"] }
 comfy-table = { version = "7.1.1", default-features = false }
 file-mode = "0.1.2"
 filetime = "0.2.23"
